Refactor ObjPatternMultiplier